array.island.Island.scala.error
Compilation error:
Island:4: error: value len is not a member of Array[Int]
  for (i <- 1 to (num.len - 1)){
                      ^